[project]
name = "AO3"
version = "0.1.0"
description = "A lightweight and efficient scraper designed with BeautifulSoup4 and Requests, providing programmatic access to www.archiveofourown.org."
authors = [
    {name = "BruRdgz",email = "bru.rdgz@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cloudscraper (>=1.2.71,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
